# task-manager

./: .clang-format  .clang-tidy  .clang_complete  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindBoost.cmake  add_link_options.cmake  compiler_flags.cmake  join.cmake  linker_flags.cmake  policies.cmake  preprocessor_definitions.cmake  warnings.cmake
include/tsk/: scheduler.hpp  task.hpp  thread_pool.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp  task_manager_test.cpp
